# wiktionary-dump-parser-rs

./: .gitignore  Cargo.toml  README.md  runtimes.txt
.github/workflows/: ci.yml
src/: error.rs  language_code.rs  lib.rs  main.rs  urls.rs
src/download/: mod.rs
src/parser/: mod.rs
src/parser/words/: mod.rs
src/parser/xml/: mod.rs
