[package]
name = "wiktionary-dump-parser"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wiktionary-dump-parser"

[lib]

[dependencies]
tokio = {version = "1.17.0", features = ["full"]}
reqwest = "0.11.9"
clap = {version = "3.1.0", features = ["derive"]}
log = "0.4.14"
simplelog = "0.11.2"
regex = "1.5.4"
lazy_static = "1.4.0"