[package]
name = "wiktionary-dump-parser"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wiktionary-dump-parser"

[lib]

[dependencies]
tokio = {version = "1.17.0", features = ["full"]}
reqwest = {version = "0.11.9", features = ["stream"]}
clap = {version = "3.1.0", features = ["derive"]}
log = "0.4.14"
simplelog = "0.11.2"
regex = "1.5.4"
lazy_static = "1.4.0"
url = "2.2.2"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
itertools = "0.10.3"
lexiclean = "0.0.1"
futures-util = "0.3.21"
num-integer = "0.1.44"
bzip2 = {version = "0.4.3", features = ["tokio"]}
quick-xml = {git = "https://github.com/ISibboI/quick-xml", rev = "7245623ba72c70720de4c706407f71de2f854903"}
digest = "0.10.3"
md-5 = "0.10.1"
sha1 = "0.10.1"