[package]
name = "wiktionary-dump-parser"
description = "Download and parse dump files of wiktionary"
version = "0.5.0"
edition = "2021"
rust-version = "1.58.1"
license-file = "LICENSE"
repository = "https://github.com/ISibboI/wiktionary-dump-parser-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wiktionary-dump-parser"

[lib]

[dependencies]
wikitext-parser = {version = "0.3.2", features = ["serde"]}

tokio = {version = "1.29.1", features = ["full"]}
reqwest = {version = "0.11.18", features = ["stream"]}
clap = {version = "4.3.19", features = ["derive"]}
log = "0.4.19"
simplelog = "0.12.1"
regex = "1.9.1"
lazy_static = "1.4.0"
url = "2.2.2"
serde = {version = "1.0.174", features = ["derive"]}
serde_json = "1.0.103"
itertools = "0.11.0"
lexiclean = "0.0.1"
futures-util = "0.3.21"
num-integer = "0.1.44"
bzip2 = {version = "0.4.4", features = ["tokio"]}
quick-xml = "0.30.0"
digest = "0.10.7"
md-5 = "0.10.1"
sha1 = "0.10.1"
thiserror = "1.0.44"